--- a/SCCMCliCtrWPF/SCCMCliCtrWPF/Controls/SWUpdatesGrid.xaml
+++ b/SCCMCliCtrWPF/SCCMCliCtrWPF/Controls/SWUpdatesGrid.xaml
@@ -42,6 +42,18 @@
                             <TextBlock Margin="2,0,0,0">Open WUAHandler.log</TextBlock>
                         </StackPanel>
                     </Button>
+                    <Button ToolTip="Open C:\$Windows.~BT\Sources\panther\setupact.log" Name="bt_OpenSetupactLog" Click="Bt_OpenSetupactLog_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/SCCMCliCtrWPF;component/Images/Search File.ico"/>
+                            <TextBlock Margin="2,0,0,0">Open setupact.log</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button ToolTip="Open C:\$Windows.~BT\Sources\panther\setupact.log" Name="bt_OpenSetuperrLog" Click="Bt_OpenSetuperrLog_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/SCCMCliCtrWPF;component/Images/Search File.ico"/>
+                            <TextBlock Margin="2,0,0,0">Open setuperr.log</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </ToolBar>
              </DockPanel>
             <DockPanel DockPanel.Dock="Top">
